Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn93:8.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:8.4": "„Was denkst du, Assalāyana? ",
   "mn93:8.5": "Wenn ein Brahmane das Töten lebender Geschöpfe, das Stehlen und das Begehen sexueller Verfehlungen unterlassen würde; wenn er den Gebrauch falscher, entzweiender, harter oder unsinnige Rede unterlassen würde; wenn er zufrieden und gütig wäre und rechte Ansicht hätte; und wenn sein Körper auseinanderbräche, nach dem Tod, würde er an einem guten Ort wiedergeboren, in einer himmlischen Welt – könnte das nur einem Brahmanen widerfahren und keinem Adligen, Händler oder Arbeiter?“ ",
-  "mn93:8.6": "„Nein, Meister Gotama. "
+  "mn93:8.6": "„Nein, Meister Gotama. ",
+  "mn93:8.7": "Wenn sie das Gleiche täten, würde einem Adligen, einem Brahmanen, einem Händler oder einem Arbeite das gleiche Ergebnis widerfahren. "
 }
