--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "mn93:8.12": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ ",
   "mn93:9.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:9.4": "„Was denkst du, Assalāyana? ",
-  "mn93:9.5": "Ist nur ein Brahmane in der Lage, für diese Gegend ein liebevolles Herz zu entwickeln, frei von Feindschaft und bösem Willen, und kein Adliger, Händler oder Arbeiter?“ "
+  "mn93:9.5": "Ist nur ein Brahmane in der Lage, für diese Gegend ein liebevolles Herz zu entwickeln, frei von Feindschaft und bösem Willen, und kein Adliger, Händler oder Arbeiter?“ ",
+  "mn93:9.6": "„Nein, Meister Gotama. "
 }
