Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "mn93:9.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:9.4": "„Was denkst du, Assalāyana? ",
   "mn93:9.5": "Ist nur ein Brahmane in der Lage, für diese Gegend ein liebevolles Herz zu entwickeln, frei von Feindschaft und bösem Willen, und kein Adliger, Händler oder Arbeiter?“ ",
-  "mn93:9.6": "„Nein, Meister Gotama. "
+  "mn93:9.6": "„Nein, Meister Gotama. ",
+  "mn93:9.7": "Adlige, Brahmanen, Händler und Arbeiter sind alle dazu in der Lage. "
 }
