--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -75,5 +75,6 @@
   "mn93:9.7": "Adlige, Brahmanen, Händler und Arbeiter sind alle dazu in der Lage. ",
   "mn93:9.11": "Denn die vier Kasten sind in der Lage, für diese Gegend ein liebevolles Herz zu entwickeln, frei von Feindschaft und bösem Willen.“ ",
   "mn93:9.12": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ ",
-  "mn93:10.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ "
+  "mn93:10.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
+  "mn93:10.4": "„Was denkst du, Assalāyana? "
 }
