--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -76,5 +76,6 @@
   "mn93:9.11": "Denn die vier Kasten sind in der Lage, für diese Gegend ein liebevolles Herz zu entwickeln, frei von Feindschaft und bösem Willen.“ ",
   "mn93:9.12": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ ",
   "mn93:10.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
-  "mn93:10.4": "„Was denkst du, Assalāyana? "
+  "mn93:10.4": "„Was denkst du, Assalāyana? ",
+  "mn93:10.5": "Ist nur ein Brahmane in der Lage, Badepaste aus zerriebenen Muschelschalen zu nehmen und zum Fluss zu gehen, um Staub und Schmutz abzuwaschen, und kein Adliger, Händler oder Arbeiter?“ "
 }
