--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -78,5 +78,6 @@
   "mn93:10.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:10.4": "„Was denkst du, Assalāyana? ",
   "mn93:10.5": "Ist nur ein Brahmane in der Lage, Badepaste aus zerriebenen Muschelschalen zu nehmen und zum Fluss zu gehen, um Staub und Schmutz abzuwaschen, und kein Adliger, Händler oder Arbeiter?“ ",
-  "mn93:10.6": "„Nein, Meister Gotama. "
+  "mn93:10.6": "„Nein, Meister Gotama. ",
+  "mn93:10.10": "Alle vier Kasten sind in der Lage, das zu tun.“ "
 }
