--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "mn93:10.4": "„Was denkst du, Assalāyana? ",
   "mn93:10.5": "Ist nur ein Brahmane in der Lage, Badepaste aus zerriebenen Muschelschalen zu nehmen und zum Fluss zu gehen, um Staub und Schmutz abzuwaschen, und kein Adliger, Händler oder Arbeiter?“ ",
   "mn93:10.6": "„Nein, Meister Gotama. ",
-  "mn93:10.10": "Alle vier Kasten sind in der Lage, das zu tun.“ "
+  "mn93:10.10": "Alle vier Kasten sind in der Lage, das zu tun.“ ",
+  "mn93:10.11": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ "
 }
