--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "mn93:10.10": "Alle vier Kasten sind in der Lage, das zu tun.“ ",
   "mn93:10.11": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ ",
   "mn93:11.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
-  "mn93:11.4": "„Was denkst du, Assalāyana? "
+  "mn93:11.4": "„Was denkst du, Assalāyana? ",
+  "mn93:11.5": "Da würde ein gesalbter adliger König hundert Menschen versammeln, die in unterschiedlichen Kasten geboren wären, und würde zu ihnen sagen: "
 }
