--- a/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
@@ -136,7 +136,7 @@
   "mn140:19.10": "Ein neutrales Gefühl entsteht in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. ",
   "mn140:19.11": "Wenn man ein neutrales Gefühl fühlt, weiß man: ‚Ich fühle ein neutrales Gefühl.‘ ",
   "mn140:19.12": "Man weiß: ‚Mit dem Aufhören dieser Berührung, die als neutral zu erleben ist, hört das entsprechende neutrale Gefühl auf und vergeht.‘ ",
-  "mn140:19.13": "Wie wenn man zwei Hölzer aneinander reibt: Hitze wird erzeugt und eine Flamme hervorgebracht. Aber wenn man die Hölzer trennt und zur Seite legt, hört die entsprechende Hitze auf und vergeht. ",
+  "mn140:19.13": "Wie wenn man zwei Hölzer aneinander reibt: Hitze wird erzeugt und eine Flamme entzündet. Aber wenn man die Hölzer trennt und zur Seite legt, hört die entsprechende Hitze auf und vergeht. ",
   "mn140:19.14": "Ebenso entsteht ein angenehmes Gefühl in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. … ",
   "mn140:19.22": "Man weiß: ‚Mit dem Aufhören dieser Berührung, die als neutral zu erleben ist, hört das entsprechende neutrale Gefühl auf und vergeht.‘ ",
   "mn140:20.1": "Dann bleibt nur Gleichmut übrig, rein und hell, geschmeidig, formbar und leuchtend. ",
