--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -84,5 +84,6 @@
   "mn93:11.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:11.4": "„Was denkst du, Assalāyana? ",
   "mn93:11.5": "Da würde ein gesalbter adliger König hundert Menschen versammeln, die in unterschiedlichen Kasten geboren wären, und würde zu ihnen sagen: ",
-  "mn93:11.6": "‚Bitte, meine Herren, jeder, der in einer Familie von Adligen, Brahmanen oder Stammesfürsten geboren wurde, soll ein Reibholz aus Teakholz, Salbaumholz, Weihrauchbaumholz, Sandelholz oder Kirschbaumholz nehmen und damit ein Feuer entzünden und Hitze erzeugen. "
+  "mn93:11.6": "‚Bitte, meine Herren, jeder, der in einer Familie von Adligen, Brahmanen oder Stammesfürsten geboren wurde, soll ein Reibholz aus Teakholz, Salbaumholz, Weihrauchbaumholz, Sandelholz oder Kirschbaumholz nehmen und damit ein Feuer entzünden und Hitze erzeugen. ",
+  "mn93:11.7": "Und jeder, der in einer Familie von Ausgestoßenen, Jägern, Bambusarbeitern, Wagenbauern oder Abfallsammlern geboren wurde, soll ein Reibholz nehmen, das aus einem Hundenapf, einem Schweinetrog, einer Mülltonne oder Rizinusbaumholz gemacht wurde, und damit ein Feuer entzünden und Hitze erzeugen. "
 }
