--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "mn93:11.7": "Und jeder, der in einer Familie von Ausgestoßenen, Jägern, Bambusarbeitern, Wagenbauern oder Abfallsammlern geboren wurde, soll ein Reibholz nehmen, das aus einem Hundenapf, einem Schweinetrog, einer Mülltonne oder Rizinusbaumholz gemacht wurde, und damit ein Feuer entzünden und Hitze erzeugen. ",
   "mn93:11.8": "Was denkst du, Assalāyana? ",
   "mn93:11.9": "Würde das Feuer, das von den Menschen aus höheren Kasten mit Reibhölzern aus hochwertigem Holz entzündet wurde, Flammen haben, eine Farbe und einen Glanz, und wäre es als Feuer zu gebrauchen, ",
-  "mn93:11.10": "und das Feuer, das von den Menschen aus niederen Kasten mit Reibhölzern aus minderwertigem Holz entzündet wurde, wäre das nicht?“ "
+  "mn93:11.10": "und das Feuer, das von den Menschen aus niederen Kasten mit Reibhölzern aus minderwertigem Holz entzündet wurde, wäre das nicht?“ ",
+  "mn93:11.11": "„Nein, Meister Gotama. "
 }
