--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -89,5 +89,6 @@
   "mn93:11.8": "Was denkst du, Assalāyana? ",
   "mn93:11.9": "Würde das Feuer, das von den Menschen aus höheren Kasten mit Reibhölzern aus hochwertigem Holz entzündet wurde, Flammen haben, eine Farbe und einen Glanz, und wäre es als Feuer zu gebrauchen, ",
   "mn93:11.10": "und das Feuer, das von den Menschen aus niederen Kasten mit Reibhölzern aus minderwertigem Holz entzündet wurde, wäre das nicht?“ ",
-  "mn93:11.11": "„Nein, Meister Gotama. "
+  "mn93:11.11": "„Nein, Meister Gotama. ",
+  "mn93:11.12": "Das Feuer, das von den Menschen aus höheren Kasten mit Reibhölzern aus hochwertigem Holz entzündet wurde, hätte Flammen, eine Farbe und einen Glanz, und es wäre als Feuer zu gebrauchen, "
 }
