--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -92,5 +92,6 @@
   "mn93:11.11": "„Nein, Meister Gotama. ",
   "mn93:11.12": "Das Feuer, das von den Menschen aus höheren Kasten mit Reibhölzern aus hochwertigem Holz entzündet wurde, hätte Flammen, eine Farbe und einen Glanz, und es wäre als Feuer zu gebrauchen, ",
   "mn93:11.13": "und ebenso das Feuer, das von den Menschen aus niederen Kasten mit Reibhölzern aus minderwertigem Holz entzündet wurde. ",
-  "mn93:11.14": "Denn jedes Feuer hat Flammen, eine Farbe und einen Glanz und ist als Feuer zu gebrauchen.“ "
+  "mn93:11.14": "Denn jedes Feuer hat Flammen, eine Farbe und einen Glanz und ist als Feuer zu gebrauchen.“ ",
+  "mn93:11.15": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ "
 }
