--- a/translation/en/sujato/sutta/sn/sn35/sn35.86_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.86_translation-en-sujato.json
@@ -30,7 +30,7 @@
   "sn35.86:19.1": "“Impermanent, sir.” ",
   "sn35.86:20.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.86:21.1": "“Suffering, sir.” ",
-  "sn35.86:22.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.86:22.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.86:22.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.86:23.1": "“No, sir.” ",
   "sn35.86:24.1": "“Seeing this, a learned noble disciple grows disillusioned with the eye, sights, eye consciousness, and eye contact. And they grow disillusioned with the painful, pleasant, or neutral feeling that arises conditioned by eye contact. ",
