Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.86_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.86_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.86_translation-en-sujato.json
@@ -19,7 +19,7 @@
   "sn35.86:11.1": "“Impermanent, sir.” ",
   "sn35.86:12.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.86:13.1": "“Suffering, sir.” ",
-  "sn35.86:14.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.86:14.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.86:14.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.86:15.1": "“No, sir.” … ",
   "sn35.86:16.1": "“Is the ear … nose … tongue … body … mind … ",
