Translations by sujato to translation/en/sujato/sutta/sn/sn44/sn44.2_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn44/sn44.2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn44/sn44.2_translation-en-sujato.json
@@ -37,7 +37,7 @@
   "sn44.2:4.1": "“Impermanent, sir.” ",
   "sn44.2:5.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn44.2:6.1": "“Suffering, sir.” ",
-  "sn44.2:7.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn44.2:7.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn44.2:7.2": "‘This is mine, I am this, this is my self’?” ",
   "sn44.2:8.1": "“No, sir.” ",
   "sn44.2:9.1": "“Is feeling … ",
