--- a/translation/en/sujato/sutta/sn/sn35/sn35.150_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.150_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "sn35.150:2.1": "“Impermanent, sir.” ",
   "sn35.150:3.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.150:4.1": "“Suffering, sir.” ",
-  "sn35.150:5.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.150:5.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.150:5.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.150:6.1": "“No, sir.” ",
   "sn35.150:7.1": "“Are sights … ",
