--- a/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
@@ -67,7 +67,7 @@
   "sn35.121:46.1": "“Impermanent, sir.” ",
   "sn35.121:47.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.121:48.1": "“Suffering, sir.” ",
-  "sn35.121:49.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.121:49.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.121:49.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.121:50.1": "“No, sir.” ",
   "sn35.121:51.1": "“Seeing this, a learned noble disciple grows disillusioned with the eye, sights, eye consciousness, and eye contact. And they become disillusioned with anything included in feeling, perception, choices, and consciousness that arises conditioned by eye contact. ",
