Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
@@ -54,7 +54,7 @@
   "sn35.121:34.1": "“Impermanent, sir.” ",
   "sn35.121:35.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.121:36.1": "“Suffering, sir.” ",
-  "sn35.121:37.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.121:37.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.121:37.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.121:38.1": "“No, sir.” ",
   "sn35.121:39.1": "“Are thoughts … ",
