--- a/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
@@ -34,7 +34,7 @@
   "sn35.121:16.1": "“Impermanent, sir.” ",
   "sn35.121:17.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.121:18.1": "“Suffering, sir.” ",
-  "sn35.121:19.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.121:19.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.121:19.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.121:20.1": "“No, sir.” ",
   "sn35.121:21.1": "“Is the ear … nose … tongue … body … ",
