Translations by sujato to translation/en/sujato/sutta/sn/sn24/sn24.71_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn24/sn24.71_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn24/sn24.71_translation-en-sujato.json
@@ -18,7 +18,7 @@
   "sn24.71:2.10": "“Impermanent, sir.” ",
   "sn24.71:2.11": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn24.71:2.12": "“Suffering, sir.” ",
-  "sn24.71:2.13": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn24.71:2.13": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn24.71:2.14": "‘This is mine, I am this, this is my self’?” ",
   "sn24.71:2.15": "“No, sir.” ",
   "sn24.71:2.16": "“Is feeling … ",
