--- a/translation/en/sujato/sutta/sn/sn35/sn35.32_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.32_translation-en-sujato.json
@@ -39,7 +39,7 @@
   "sn35.32:23.1": "“Impermanent, sir.” ",
   "sn35.32:24.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.32:25.1": "“Suffering, sir.” ",
-  "sn35.32:26.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.32:26.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.32:26.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.32:27.1": "“No, sir.” ",
   "sn35.32:28.1": "“Seeing this, a learned noble disciple grows disillusioned with the eye, sights, eye consciousness, and eye contact. ",
