Translations by sujato to translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
@@ -258,7 +258,7 @@
   "mn22:26.3": "“Impermanent, sir.” ",
   "mn22:26.4": "“But if it’s impermanent, is it suffering or happiness?” ",
   "mn22:26.5": "“Suffering, sir.” ",
-  "mn22:26.6": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "mn22:26.6": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "mn22:26.7": "‘This is mine, I am this, this is my self’?” ",
   "mn22:26.8": "“No, sir.” ",
   "mn22:26.9": "“What do you think, mendicants? ",
@@ -269,7 +269,7 @@
   "mn22:26.14": "“Impermanent, sir.” ",
   "mn22:26.15": "“But if it’s impermanent, is it suffering or happiness?” ",
   "mn22:26.16": "“Suffering, sir.” ",
-  "mn22:26.17": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "mn22:26.17": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "mn22:26.18": "‘This is mine, I am this, this is my self’?” ",
   "mn22:26.19": "“No, sir.” ",
   "mn22:27.1": "“So, mendicants, you should truly see any kind of form at all—past, future, or present; internal or external; coarse or fine; inferior or superior; far or near: *all* form—with right understanding: ‘This is not mine, I am not this, this is not my self.’ ",
