Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.121_translation-en-sujato.json
@@ -21,7 +21,7 @@
   "sn35.121:4.1": "“Impermanent, sir.” ",
   "sn35.121:5.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.121:6.1": "“Suffering, sir.” ",
-  "sn35.121:7.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.121:7.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.121:7.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.121:8.1": "“No, sir.” ",
   "sn35.121:9.1": "“Are sights … ",
