Translations by sujato to translation/en/sujato/sutta/mn/mn35_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn35_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn35_translation-en-sujato.json
@@ -144,7 +144,7 @@
   "mn35:20.6": "“Impermanent.” ",
   "mn35:20.7": "“But if it’s impermanent, is it suffering or happiness?” ",
   "mn35:20.8": "“Suffering.” ",
-  "mn35:20.9": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "mn35:20.9": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "mn35:20.10": "‘This is mine, I am this, this is my self’?” ",
   "mn35:20.11": "“No, Master Gotama.” ",
   "mn35:20.12": "“What do you think, Aggivessana? ",
@@ -155,7 +155,7 @@
   "mn35:20.17": "“Impermanent.” ",
   "mn35:20.18": "“But if it’s impermanent, is it suffering or happiness?” ",
   "mn35:20.19": "“Suffering.” ",
-  "mn35:20.20": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "mn35:20.20": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "mn35:20.21": "‘This is mine, I am this, this is my self’?” ",
   "mn35:20.22": "“No, Master Gotama.” ",
   "mn35:21.1": "“What do you think, Aggivessana? ",
