--- a/translation/en/sujato/sutta/sn/sn35/sn35.89_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.89_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "sn35.89:3.1": "“Impermanent, sir.” ",
   "sn35.89:4.1": "“But if it’s impermanent, is it suffering or happiness?” ",
   "sn35.89:5.1": "“Suffering, sir.” ",
-  "sn35.89:6.1": "“But if it’s impermanent, suffering, and liable to wear out, is it fit to be regarded thus: ",
+  "sn35.89:6.1": "“But if it’s impermanent, suffering, and perishable, is it fit to be regarded thus: ",
   "sn35.89:6.2": "‘This is mine, I am this, this is my self’?” ",
   "sn35.89:7.1": "“No, sir.” ",
   "sn35.89:8.1": "“Are sights … ",
