--- a/translation/en/sujato/sutta/sn/sn37/sn37.11_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn37/sn37.11_translation-en-sujato.json
@@ -1,7 +1,7 @@
 {
   "sn37.11:0.1": "Linked Discourses 37.11 ",
   "sn37.11:0.2": "1. Abbreviated Texts ",
-  "sn37.11:0.3": "Unlearned ",
+  "sn37.11:0.3": "unlearned ",
   "sn37.11:1.1": "",
   "sn37.11:1.2": "",
   "sn37.11:1.3": "“… They’re faithless, shameless, imprudent, unlearned, and witless. …” ",
