--- a/translation/en/sujato/sutta/mn/mn56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn56_translation-en-sujato.json
@@ -55,7 +55,7 @@
   "mn56:5.9": "Then Dīgha Tapassī informed Nigaṇṭha Nātaputta of all they had discussed. ",
   "mn56:6.1": "When he had spoken, Nigaṇṭha said to him, ",
   "mn56:6.2": "“Good, good, Tapassī! ",
-  "mn56:6.3": "Dīgha Tapassī has answered the ascetic Gotama like an educated disciple who rightly understands their teacher’s instructions. ",
+  "mn56:6.3": "Dīgha Tapassī has answered the ascetic Gotama like a learned disciple who rightly understands their teacher’s instructions. ",
   "mn56:6.4": "For how impressive is the measly mental rod when compared with the substantial physical rod? ",
   "mn56:6.5": "Rather, the physical rod is the most blameworthy for performing bad deeds, not so much the verbal rod or the mental rod.” ",
   "mn56:7.1": "When he said this, the householder Upāli said to him, ",
