--- a/translation/en/sujato/sutta/sn/sn22/sn22.123_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.123_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "sn22.123:2.3": "What five? ",
   "sn22.123:2.4": "That is, the grasping aggregates of form, feeling, perception, choices, and consciousness. ",
   "sn22.123:2.5": "An educated mendicant should properly attend to these five grasping aggregates as impermanent … as not-self. ",
-  "sn22.123:2.6": "It’s possible that a learned mendicantt who properly attends to the five grasping aggregates will realize the fruit of stream-entry.” ",
+  "sn22.123:2.6": "It’s possible that a learned mendicant who regards the five grasping aggregates in this way will realize the fruit of stream-entry.” ",
   "sn22.123:3.1": "“But Reverend Sāriputta, what things should a mendicant stream-enterer properly attend to?” ",
   "sn22.123:3.2": "“A mendicant stream-enterer should also properly attend to these five grasping aggregates as impermanent … as not-self. ",
   "sn22.123:3.3": "It’s possible that a mendicant stream-enterer who properly attends to the five grasping aggregates will realize the fruit of once-return.” … ",
