Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -63,5 +63,13 @@
   "pli-tv-bu-pm:26.4": "then the monks should correct him like this: ",
   "pli-tv-bu-pm:26.5": "'Be easy to correct, Venerable, not incorrigible. ",
   "pli-tv-bu-pm:26.6": "And please give legitimate correction to the monks, and the monks will do the same to you. ",
-  "pli-tv-bu-pm:26.7": "For it’s in this way that the Buddha’s community has grown, that is, through mutual correction and mutual clearing of offenses.'"
+  "pli-tv-bu-pm:26.7": "For it’s in this way that the Buddha’s community has grown, that is, through mutual correction and mutual clearing of offenses.'",
+  "pli-tv-bu-pm:26.8": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
+  "pli-tv-bu-pm:26.9": "If he then stops, all is well.",
+  "pli-tv-bu-pm:26.10": "he commits an offense entailing suspension. ",
+  "pli-tv-bu-pm:27.1": "If a monk who lives supported by a village or town is a corrupter of families and badly behaved, and his bad behavior has been seen and heard about, and the families corrupted by his have been seen and heard about, ",
+  "pli-tv-bu-pm:27.2": "then the monks should correct him like this: ",
+  "pli-tv-bu-pm:27.3": "'Venerable, you’re a corrupter of families and badly behaved. Your bad behavior has been seen and heard about, and the families corrupted by you have been seen and heard about. Leave this monastery; you’ve stayed here long enough.'",
+  "pli-tv-bu-pm:27.4": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
+  "pli-tv-bu-pm:27.5": "'You’re acting out of desire, ill will, confusion, and fear. Because of this sort of offense, you only banish some, but not others,'"
 }
