--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -71,5 +71,6 @@
   "pli-tv-bu-pm:27.2": "then the monks should correct him like this: ",
   "pli-tv-bu-pm:27.3": "'Venerable, you’re a corrupter of families and badly behaved. Your bad behavior has been seen and heard about, and the families corrupted by you have been seen and heard about. Leave this monastery; you’ve stayed here long enough.'",
   "pli-tv-bu-pm:27.4": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
-  "pli-tv-bu-pm:27.5": "'You’re acting out of desire, ill will, confusion, and fear. Because of this sort of offense, you only banish some, but not others,'"
+  "pli-tv-bu-pm:27.5": "'You’re acting out of desire, ill will, confusion, and fear. Because of this sort of offense, you only banish some, but not others,'",
+  "pli-tv-bu-pm:27.6": "then the monks should correct him like this: "
 }
