--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -77,5 +77,6 @@
   "pli-tv-bu-pm:27.8": "'Venerable, you’re a corrupter of families and badly behaved. Your bad behavior has been seen and heard about, and the families corrupted by you have been seen and heard about. Leave this monastery; you’ve stayed here long enough.'",
   "pli-tv-bu-pm:27.9": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
   "pli-tv-bu-pm:27.10": "If he then stops, all is well.",
-  "pli-tv-bu-pm:27.11": "he commits an offense entailing suspension. "
+  "pli-tv-bu-pm:27.11": "he commits an offense entailing suspension. ",
+  "pli-tv-bu-pm:28.1": "“Venerables, the thirteen rules on suspension have been recited, nine being immediate offenses, four after the third announcement. "
 }
