Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -78,5 +78,6 @@
   "pli-tv-bu-pm:27.9": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
   "pli-tv-bu-pm:27.10": "If he then stops, all is well.",
   "pli-tv-bu-pm:27.11": "he commits an offense entailing suspension. ",
-  "pli-tv-bu-pm:28.1": "“Venerables, the thirteen rules on suspension have been recited, nine being immediate offenses, four after the third announcement. "
+  "pli-tv-bu-pm:28.1": "“Venerables, the thirteen rules on suspension have been recited, nine being immediate offenses, four after the third announcement. ",
+  "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him"
 }
