--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -79,5 +79,6 @@
   "pli-tv-bu-pm:27.10": "If he then stops, all is well.",
   "pli-tv-bu-pm:27.11": "he commits an offense entailing suspension. ",
   "pli-tv-bu-pm:28.1": "“Venerables, the thirteen rules on suspension have been recited, nine being immediate offenses, four after the third announcement. ",
-  "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him"
+  "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him",
+  "pli-tv-bu-pm:30.2": "and accuses him of an offense entailing expulsion, an offense entailing suspension, or an offense entailing confession,\n"
 }
