--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -82,5 +82,6 @@
   "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him",
   "pli-tv-bu-pm:30.2": "and accuses him of an offense entailing expulsion, an offense entailing suspension, or an offense entailing confession,\n",
   "pli-tv-bu-pm:30.3": "then, if he admits to the sitting, he is to be dealt with according to one of these three",
-  "pli-tv-bu-pm:30.4": "or according to what that trustworthy female lay follower has said.\n"
+  "pli-tv-bu-pm:30.4": "or according to what that trustworthy female lay follower has said.\n",
+  "pli-tv-bu-pm:30.5": "This rule is undetermined."
 }
