--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -80,6 +80,7 @@
   "pli-tv-bu-pm:27.11": "he commits an offense entailing suspension. ",
   "pli-tv-bu-pm:28.1": "“Venerables, the thirteen rules on suspension have been recited, nine being immediate offenses, four after the third announcement. ",
   "pli-tv-bu-pm:28.2": "If a monk commits any one of them, he is to undergo probation for the same number of days as he knowingly concealed that offense.\n",
+  "pli-tv-bu-pm:28.3": "When this is completed, he must undertake the trial period for a further six days.\n",
   "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him",
   "pli-tv-bu-pm:30.2": "and accuses him of an offense entailing expulsion, an offense entailing suspension, or an offense entailing confession,\n",
   "pli-tv-bu-pm:30.3": "then, if he admits to the sitting, he is to be dealt with according to one of these three",
