--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -85,6 +85,7 @@
   "pli-tv-bu-pm:28.5": "If that monk is rehabilitated by a sangha of even one less than twenty, that monk is not rehabilitated and those monks are at fault. This is the proper procedure.\n",
   "pli-tv-bu-pm:28.6": "In regard to this I ask you, ‘Are you pure in this?’\n",
   "pli-tv-bu-pm:28.7": "A second time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:28.8": "A third time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him",
   "pli-tv-bu-pm:30.2": "and accuses him of an offense entailing expulsion, an offense entailing suspension, or an offense entailing confession,\n",
   "pli-tv-bu-pm:30.3": "then, if he admits to the sitting, he is to be dealt with according to one of these three",
