--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -86,6 +86,7 @@
   "pli-tv-bu-pm:28.6": "In regard to this I ask you, ‘Are you pure in this?’\n",
   "pli-tv-bu-pm:28.7": "A second time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:28.8": "A third time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:28.9": "You are pure in this and therefore silent. I will remember it thus.’ ",
   "pli-tv-bu-pm:30.1": "If a monk sits alone with a woman on a private and concealed seat suitable for action, and a trustworthy female lay follower sees him",
   "pli-tv-bu-pm:30.2": "and accuses him of an offense entailing expulsion, an offense entailing suspension, or an offense entailing confession,\n",
   "pli-tv-bu-pm:30.3": "then, if he admits to the sitting, he is to be dealt with according to one of these three",
