Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -93,5 +93,6 @@
   "pli-tv-bu-pm:30.2": "and accuses him of an offense entailing expulsion, an offense entailing suspension, or an offense entailing confession,\n",
   "pli-tv-bu-pm:30.3": "then, if he admits to the sitting, he is to be dealt with according to one of these three",
   "pli-tv-bu-pm:30.4": "or according to what that trustworthy female lay follower has said.\n",
-  "pli-tv-bu-pm:30.5": "This rule is undetermined."
+  "pli-tv-bu-pm:30.5": "This rule is undetermined.",
+  "pli-tv-bu-pm:31.1": "Although a seat is not concealed, nor suitable for action, it may be suitable for speaking indecently to a woman."
 }
