--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -96,5 +96,6 @@
   "pli-tv-bu-pm:30.5": "This rule is undetermined.",
   "pli-tv-bu-pm:31.1": "Although a seat is not concealed, nor suitable for action, it may be suitable for speaking indecently to a woman.",
   "pli-tv-bu-pm:31.2": "If a monk sits alone with a woman in private on such a seat, and a trustworthy female lay follower sees him\n",
-  "pli-tv-bu-pm:31.3": "and accuses him of an offense entailing suspension or an offense entailing confession,\n"
+  "pli-tv-bu-pm:31.3": "and accuses him of an offense entailing suspension or an offense entailing confession,\n",
+  "pli-tv-bu-pm:31.4": "then, if he admits to the sitting, he is to be dealt with according to one of these two\n"
 }
