Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -100,5 +100,6 @@
   "pli-tv-bu-pm:31.4": "then, if he admits to the sitting, he is to be dealt with according to one of these two\n",
   "pli-tv-bu-pm:31.5": "or according to what that trustworthy female lay follower has said.\n",
   "pli-tv-bu-pm:31.6": "This rule too is undetermined.",
-  "pli-tv-bu-pm:32.1": "“Venerables, the two undetermined rules have been recited. "
+  "pli-tv-bu-pm:32.1": "“Venerables, the two undetermined rules have been recited. ",
+  "pli-tv-bu-pm:32.2": "In regard to this I ask you, ‘Are you pure in this?’ "
 }
