--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -102,5 +102,6 @@
   "pli-tv-bu-pm:31.6": "This rule too is undetermined.",
   "pli-tv-bu-pm:32.1": "“Venerables, the two undetermined rules have been recited. ",
   "pli-tv-bu-pm:32.2": "In regard to this I ask you, ‘Are you pure in this?’ ",
-  "pli-tv-bu-pm:32.3": "A second time I ask, ‘Are you pure in this?’ "
+  "pli-tv-bu-pm:32.3": "A second time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:32.4": "A third time I ask, ‘Are you pure in this?’ "
 }
