Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -103,5 +103,6 @@
   "pli-tv-bu-pm:32.1": "“Venerables, the two undetermined rules have been recited. ",
   "pli-tv-bu-pm:32.2": "In regard to this I ask you, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:32.3": "A second time I ask, ‘Are you pure in this?’ ",
-  "pli-tv-bu-pm:32.4": "A third time I ask, ‘Are you pure in this?’ "
+  "pli-tv-bu-pm:32.4": "A third time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:32.5": "You are pure in this and therefore silent. I will remember it thus.’ "
 }
