Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -105,5 +105,6 @@
   "pli-tv-bu-pm:32.3": "A second time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:32.4": "A third time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:32.5": "You are pure in this and therefore silent. I will remember it thus.’ ",
-  "pli-tv-bu-pm:32.6": "THE CHAPTER ON UNDETERMINED OFFENSES IS FINISHED."
+  "pli-tv-bu-pm:32.6": "THE CHAPTER ON UNDETERMINED OFFENSES IS FINISHED.",
+  "pli-tv-bu-pm:33.1": "Venerables, these thirty rules on relinquishment and confession come up for recitation.\n"
 }
