--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -107,5 +107,6 @@
   "pli-tv-bu-pm:32.5": "You are pure in this and therefore silent. I will remember it thus.’ ",
   "pli-tv-bu-pm:32.6": "THE CHAPTER ON UNDETERMINED OFFENSES IS FINISHED.",
   "pli-tv-bu-pm:33.1": "Venerables, these thirty rules on relinquishment and confession come up for recitation.\n",
-  "pli-tv-bu-pm:34.0.2": "When his robe is finished and the robe season has ended, a monk should keep an extra robe for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession.\n"
+  "pli-tv-bu-pm:34.0.2": "When his robe is finished and the robe season has ended, a monk should keep an extra robe for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession.\n",
+  "pli-tv-bu-pm:34.1": "When his robe is finished and the robe season has ended, if a monk stays apart from his three robes even for a single day, except if the monks have agreed, he commits an offense entailing relinquishment and confession."
 }
