--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -111,5 +111,6 @@
   "pli-tv-bu-pm:34.1": "When his robe is finished and the robe season has ended, a monk should keep an extra robe for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession.\n",
   "pli-tv-bu-pm:35.1": "When his robe is finished and the robe season has ended, if a monk stays apart from his three robes even for a single day, except if the monks have agreed, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:36.1": "When his robe is finished and the robe season has ended, if out-of-season robe-cloth is given to a monk, he may receive it if he wishes. ",
-  "pli-tv-bu-pm:36.2": "If he receives it, he should quickly make a robe."
+  "pli-tv-bu-pm:36.2": "If he receives it, he should quickly make a robe.",
+  "pli-tv-bu-pm:36.3": "If there is not enough cloth, but he is expecting more, he should keep it at most one month to make up the lack.\n"
 }
