Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -113,5 +113,6 @@
   "pli-tv-bu-pm:36.1": "When his robe is finished and the robe season has ended, if out-of-season robe-cloth is given to a monk, he may receive it if he wishes. ",
   "pli-tv-bu-pm:36.2": "If he receives it, he should quickly make a robe.",
   "pli-tv-bu-pm:36.3": "If there is not enough cloth, but he is expecting more, he should keep it at most one month to make up the lack.\n",
-  "pli-tv-bu-pm:36.4": "If he keeps it longer than that, then even if he expects more cloth, he commits an offense entailing relinquishment and confession.’”\n"
+  "pli-tv-bu-pm:36.4": "If he keeps it longer than that, then even if he expects more cloth, he commits an offense entailing relinquishment and confession.’”\n",
+  "pli-tv-bu-pm:37.1": "If a monk has an unrelated nun wash, dye, or beat a used robe, he commits an offense entailing relinquishment and confession."
 }
