--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -114,5 +114,6 @@
   "pli-tv-bu-pm:36.2": "If he receives it, he should quickly make a robe.",
   "pli-tv-bu-pm:36.3": "If there is not enough cloth, but he is expecting more, he should keep it at most one month to make up the lack.\n",
   "pli-tv-bu-pm:36.4": "If he keeps it longer than that, then even if he expects more cloth, he commits an offense entailing relinquishment and confession.’”\n",
-  "pli-tv-bu-pm:37.1": "If a monk has an unrelated nun wash, dye, or beat a used robe, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:37.1": "If a monk has an unrelated nun wash, dye, or beat a used robe, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:39.0": "If a monk receives a robe directly from an unrelated nun, he commits an offense entailing relinquishment and confession."
 }
