--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -116,5 +116,6 @@
   "pli-tv-bu-pm:36.4": "If he keeps it longer than that, then even if he expects more cloth, he commits an offense entailing relinquishment and confession.’”\n",
   "pli-tv-bu-pm:37.1": "If a monk has an unrelated nun wash, dye, or beat a used robe, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:38.1": "If a monk receives a robe directly from an unrelated nun, he commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:39.0": ""
+  "pli-tv-bu-pm:39.0": "",
+  "pli-tv-bu-pm:39.1": "If a monk asks an unrelated male or female householder for a robe, except on an appropriate occasion, he commits an offense entailing relinquishment and confession. [See essay on cīvara.]"
 }
