--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -117,5 +117,6 @@
   "pli-tv-bu-pm:37.1": "If a monk has an unrelated nun wash, dye, or beat a used robe, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:38.1": "If a monk receives a robe directly from an unrelated nun, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:39.0": "",
-  "pli-tv-bu-pm:39.1": "If a monk asks an unrelated male or female householder for a robe, except on an appropriate occasion, he commits an offense entailing relinquishment and confession. [See essay on cīvara.]"
+  "pli-tv-bu-pm:39.1": "If a monk asks an unrelated male or female householder for a robe, except on an appropriate occasion, he commits an offense entailing relinquishment and confession. [See essay on cīvara.]",
+  "pli-tv-bu-pm:39.2": "These are the appropriate occasions: his robes are stolen or his robes are lost."
 }
