Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -121,5 +121,6 @@
   "pli-tv-bu-pm:39.2": "These are the appropriate occasions: his robes are stolen or his robes are lost.",
   "pli-tv-bu-pm:40.1": "If an unrelated male or female householder invites that monk to take many robes, he should accept at most one sarong and one upper robe. ",
   "pli-tv-bu-pm:40.2": "If he accepts more than that, he commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:41.1": "If a male or female householder has set aside a robe fund for an unrelated monk, thinking,"
+  "pli-tv-bu-pm:41.1": "If a male or female householder has set aside a robe fund for an unrelated monk, thinking,",
+  "pli-tv-bu-pm:41.2": "'With this robe fund I will buy robe-cloth and give it to monk so-and-so;'"
 }
