Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -128,5 +128,6 @@
   "pli-tv-bu-pm:41.5": "and he does so because he wants something fine, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:42.1": "If two male or female householders have set aside separate robe funds for an unrelated monk, thinking,",
   "pli-tv-bu-pm:42.2": "'With these separate robe funds we’ll buy separate robe-cloths and give them to monk so-and-so;'",
-  "pli-tv-bu-pm:42.3": "and if that monk, without first being invited, goes to them and specifies the kind of robe-cloth he wants, saying,\n"
+  "pli-tv-bu-pm:42.3": "and if that monk, without first being invited, goes to them and specifies the kind of robe-cloth he wants, saying,\n",
+  "pli-tv-bu-pm:42.4": "'It would be good if you would put these separate robe funds together to buy such-and-such robe-cloth and then give it to me,'"
 }
