--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -135,5 +135,6 @@
   "pli-tv-bu-pm:43.2": "'Buy robe-cloth with this robe fund and give it to monk so-and-so,'\n",
   "pli-tv-bu-pm:43.3": "and the messenger goes to that monk and says,\n",
   "pli-tv-bu-pm:43.4": "'Venerable, I have brought a robe fund for you. Please receive it,'",
-  "pli-tv-bu-pm:43.5": "then that monk should reply,"
+  "pli-tv-bu-pm:43.5": "then that monk should reply,",
+  "pli-tv-bu-pm:43.6": "‘We don’t receive robe funds, but we do receive allowable robe-cloth at the right time.’\n"
 }
