Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -136,5 +136,6 @@
   "pli-tv-bu-pm:43.3": "and the messenger goes to that monk and says,\n",
   "pli-tv-bu-pm:43.4": "'Venerable, I have brought a robe fund for you. Please receive it,'",
   "pli-tv-bu-pm:43.5": "then that monk should reply,",
-  "pli-tv-bu-pm:43.6": "‘We don’t receive robe funds, but we do receive allowable robe-cloth at the right time.’\n"
+  "pli-tv-bu-pm:43.6": "‘We don’t receive robe funds, but we do receive allowable robe-cloth at the right time.’\n",
+  "pli-tv-bu-pm:43.7": "If that messenger says,\n"
 }
