Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -138,5 +138,6 @@
   "pli-tv-bu-pm:43.5": "then that monk should reply,",
   "pli-tv-bu-pm:43.6": "‘We don’t receive robe funds, but we do receive allowable robe-cloth at the right time.’\n",
   "pli-tv-bu-pm:43.7": "If that messenger says,\n",
-  "pli-tv-bu-pm:43.8": "'Is there anyone who provides services for you?'\n"
+  "pli-tv-bu-pm:43.8": "'Is there anyone who provides services for you?'\n",
+  "pli-tv-bu-pm:43.9": "the monk, if he needs robe-cloth, should point out a monastery worker or a lay follower and say,\n"
 }
