Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -146,5 +146,6 @@
   "pli-tv-bu-pm:43.13": "then, if that monk needs robe-cloth, he should go to that service-provider and prompt him and remind him two or three times, saying,",
   "pli-tv-bu-pm:43.14": "“I need robe-cloth.'",
   "pli-tv-bu-pm:43.15": "If he then gets robe-cloth, all is well.\n",
-  "pli-tv-bu-pm:43.16": "If he does not get it, he should stand in silence for it at most six times.\n"
+  "pli-tv-bu-pm:43.16": "If he does not get it, he should stand in silence for it at most six times.\n",
+  "pli-tv-bu-pm:43.17": "If he then gets robe-cloth, all is well.\n"
 }
