Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -150,5 +150,6 @@
   "pli-tv-bu-pm:43.17": "If he then gets robe-cloth, all is well.\n",
   "pli-tv-bu-pm:43.18": "If he makes any further effort and then gets robe-cloth, he commits an offense entailing relinquishment and confession.\n",
   "pli-tv-bu-pm:43.19": "If he does not get robe-cloth, he should go to the owners of that robe fund, or send a message, saying,\n",
-  "pli-tv-bu-pm:43.20": "'That monk hasn’t received any benefit from the robe fund you sent for him.\n"
+  "pli-tv-bu-pm:43.20": "'That monk hasn’t received any benefit from the robe fund you sent for him.\n",
+  "pli-tv-bu-pm:43.21": "Please recover what’s yours, or it might perish.'"
 }
