Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -164,5 +164,6 @@
   "pli-tv-bu-pm:48.2": "If he has a new sitting-blanket made without incorporating a piece of one standard handspan from the border of an old blanket, he commits an offense entailing relinquishment and confession.’”\n",
   "pli-tv-bu-pm:49.1": "If wool is given to a monk who is traveling, he may receive it if he wishes.",
   "pli-tv-bu-pm:49.2": "If he receives it and there is no one else to carry it, he may carry it himself for at most 40 kilometers.",
-  "pli-tv-bu-pm:49.3": "If he carries it further than that, even if there is no one else to carry it, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:49.3": "If he carries it further than that, even if there is no one else to carry it, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:50.1": "If a monk has an unrelated nun wash, dye, or comb wool, he commits an offense entailing relinquishment and confession."
 }
