Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -171,5 +171,6 @@
   "pli-tv-bu-pm:53.1": "If a monk barters in various ways, he commits an offense entailing relinquishment and confession.’",
   "pli-tv-bu-pm:53.2": "THE SECOND SUB-CHAPTER ON SILK IS FINISHED.\n",
   "pli-tv-bu-pm:54.0.2": "",
-  "pli-tv-bu-pm:54.1": "A monk should keep an extra almsbowl for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:54.1": "A monk should keep an extra almsbowl for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:55.1": "‘If a monk exchanges an almsbowl with fewer than five mends for a new almsbowl, he commits an offense entailing relinquishment and confession."
 }
