Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -175,5 +175,6 @@
   "pli-tv-bu-pm:55.1": "If a monk exchanges an almsbowl with fewer than five mends for a new almsbowl, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:55.2": "That monk should relinquish that almsbowl to a gathering of monks.\n",
   "pli-tv-bu-pm:55.3": "He should then be given the last almsbowl belonging to that gathering: 'Monk, this bowl is yours. Keep it until it breaks.'\n",
-  "pli-tv-bu-pm:55.4": "This is the proper procedure."
+  "pli-tv-bu-pm:55.4": "This is the proper procedure.",
+  "pli-tv-bu-pm:56.1": "After being received, the tonics allowable for sick monks—that is, ghee, butter, oil, honey, and syrup—should be used from storage for at most seven days."
 }
