Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -184,5 +184,6 @@
   "pli-tv-bu-pm:59.1": "If a monk himself asks for thread, and then has weavers weave him robe-cloth, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:60.1": "If a male or female householder is having robe-cloth woven by weavers for an unrelated monk and, without first being invited, that monk goes to those weavers and specifies the kind of robe-cloth he wants, saying,",
   "pli-tv-bu-pm:60.2": "'This robe-cloth that you are weaving for me, make it long and wide; make it closely woven, well-woven, well-stretched, well-scraped, and well-combed,",
-  "pli-tv-bu-pm:60.3": "and perhaps I will even give you a small gift,’"
+  "pli-tv-bu-pm:60.3": "and perhaps I will even give you a small gift,’",
+  "pli-tv-bu-pm:60.4": "then, in saying that and afterwards giving them a small gift, even a bit of almsfood, he commits an offense entailing relinquishment and confession."
 }
