Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -193,5 +193,6 @@
   "pli-tv-bu-pm:63.1": "If a monk diverts to himself material support that he knows was intended for the Sangha, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:63.2": "THE CHAPTER ON OFFENSES ENTAILING RELINQUISHMENT IS FINISHED.\n",
   "pli-tv-bu-pm:64.1": "Venerables, the thirty rules on relinquishment and confession have been recited.",
-  "pli-tv-bu-pm:64.2": "In regard to this I ask you, ‘Are you pure in this?’ "
+  "pli-tv-bu-pm:64.2": "In regard to this I ask you, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:64.3": "A second time I ask, ‘Are you pure in this?’ "
 }
