Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -194,5 +194,6 @@
   "pli-tv-bu-pm:63.2": "THE CHAPTER ON OFFENSES ENTAILING RELINQUISHMENT IS FINISHED.\n",
   "pli-tv-bu-pm:64.1": "Venerables, the thirty rules on relinquishment and confession have been recited.",
   "pli-tv-bu-pm:64.2": "In regard to this I ask you, ‘Are you pure in this?’ ",
-  "pli-tv-bu-pm:64.3": "A second time I ask, ‘Are you pure in this?’ "
+  "pli-tv-bu-pm:64.3": "A second time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:64.4": "A third time I ask, ‘Are you pure in this?’ "
 }
