Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -8,7 +8,7 @@
   "pli-tv-bu-pm:6.4": "Anyone who has committed an offense should reveal it.\n",
   "pli-tv-bu-pm:6.5": "If you haven’t committed any offense, you should remain silent.\n",
   "pli-tv-bu-pm:6.6": "If you are silent, I will regard you as pure.\n",
-  "pli-tv-bu-pm:6.7": "Just as one responds when asked individually, so too, an announcement is made three times in this kind of gathering.\n",
+  "pli-tv-bu-pm:6.7": "If you are silent, I will regard you as pure.\n",
   "pli-tv-bu-pm:6.8": "Just as one responds when asked individually, so too, an announcement is made three times in this kind of gathering.\n",
   "pli-tv-bu-pm:6.9": "If a monk remembers an offense while the announcement is being made up to the third time, but doesn’t reveal it, he is lying in full awareness.\n",
   "pli-tv-bu-pm:6.10": "Lying in full awareness is called an obstacle by the Buddha.\n",
