Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -3,7 +3,7 @@
   "pli-tv-bu-pm:5.2": "If it seems appropriate to the Sangha, it should do the observance-day ceremony, it should recite the Monastic Code.",
   "pli-tv-bu-pm:5.3": "What is the preliminary duty of the Sangha?\n",
   "pli-tv-bu-pm:6.1": "The venerables should declare their purity.\n",
-  "pli-tv-bu-pm:6.2": "I will recite the Monastic Code.\n",
+  "pli-tv-bu-pm:6.2": "The venerables should declare their purity.\n",
   "pli-tv-bu-pm:6.3": "I will recite the Monastic Code.\n",
   "pli-tv-bu-pm:6.4": "Everyone present should listen to it and attend carefully.\n",
   "pli-tv-bu-pm:6.5": "Anyone who has committed an offense should reveal it.\n",
