Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -97,5 +97,6 @@
   "mn93:12.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:12.4": "„Was denkst du, Assalāyana? ",
   "mn93:12.5": "Da würde ein adliger Junge mit einem Brahmanenmädchen schlafen und sie bekämen ein Kind. ",
-  "mn93:12.6": "Würde man das Kind nach dem Vater als Adligen oder nach der Mutter als Brahmanen bezeichnen?“ "
+  "mn93:12.6": "Würde man das Kind nach dem Vater als Adligen oder nach der Mutter als Brahmanen bezeichnen?“ ",
+  "mn93:12.7": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ "
 }
